# minify-C

./: CMakeLists.txt  requirements.txt
.github/workflows/: build.yml  compile.yml
src/generator/: main.cpp
src/lang/: clexer.cpp
src/minifier/: main.cpp
